# apt4rpm-0.69.3

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  apt4rpm.spec  apt4rpm.spec.in  configure  configure.ac
client/: README  aptrpm-2
config/: aptate-convert.in  aptate.dtd  aptate.minimal.xml  aptate.xml  dtd-frame.alpha.html  dtd-frame.html  dtd-frame.main.html  dtd-frame.tree.html  dtd-manual.book.elements_index.html  dtd-manual.book.entities_index.html  dtd-manual.book.examples_list.html  dtd-manual.book.home.html  dtd-manual.book.notations_index.html  dtd-manual.book.prolog.html  dtd-manual.elt.accept.html  dtd-manual.elt.add-arg.html  dtd-manual.elt.architecture.html  dtd-manual.elt.archive.html  dtd-manual.elt.authorization.html  dtd-manual.elt.component.html  dtd-manual.elt.distribution.html  dtd-manual.elt.email.html  dtd-manual.elt.excludedir.html  dtd-manual.elt.language.html  dtd-manual.elt.name.html  dtd-manual.elt.opt.html  dtd-manual.elt.reject.html  dtd-manual.elt.repdir.html  dtd-manual.elt.script.html  dtd-manual.elt.sharedir.html  dtd-manual.elt.sources-list-file.html  dtd-manual.elt.sources-list-ftp.html  dtd-manual.elt.sources-list-http.html  dtd-manual.elt.topdir.html  dtd-manual.elt.url.html  dtd-manual.elt.version.html  dtd-manual.elt.wget.html  dtd-manual.ex.aptate.conf.html  dtd-manual.ex.aptate.xml.html  ref.conf  (+1 more)
config/man/: elt.accept.html  elt.add-arg.html  elt.archive.html  elt.authorization.html  elt.component.html  elt.distribution.html  elt.excludedir.html  elt.language.html  elt.name.html  elt.opt.html  elt.reject.html  elt.repdir.html  elt.script.html  elt.sharedir.html  elt.sources-list-file.html  elt.sources-list-ftp.html  elt.sources-list-http.html  elt.topdir.html  elt.url.html  elt.wget.html
config/rpmpriorities/: README.suse-7.x  redhat-7.x  suse-7.x-deflt-system  suse-7.x-minimal-system
doc/: apt4rpm.html  apt4rpm.ps  apt4rpm.xml  index.html
doc/html/: ar01.html  ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  ar01s07.html  ar01s08.html  ar01s09.html  ar01s10.html
lib/Aptate/: Config.pm  Repo.pm  Version.pm.in  Yum.pm
server/: aptate.8  aptate.in  aptate.x  compare_rpm_version.in
server/methods/: script.in
